--- a/index.html
+++ b/index.html
@@ -86,17 +86,40 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Junior Web Designer</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Podcasting operational change management inside of workflows to establish a framework. Taking seamless key performance indicators offline to maximise the long tail. Keeping your eye on the ball while performing a deep dive on the start-up mentality to derive convergence on cross-platform integration.</p>
+                            <h3 class="mb-0">Senior Multimedia Assistant</h3>
+                            <div class="subheading mb-3">University of Delaware - Library, Museum & Press</div>
+                            <ul>
+                                <li> Managed a team of 8 to help students and faculty address their multimedia needs</li>
+                                <li> Collaborate with individuals from diverse backgrounds and effectively communicating in utilizing the multimedia resources and services</li>
+                            </ul>
                         </div>
-                        <div class="flex-shrink-0"><span class="text-primary">July 2010 - December 2011</span></div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2023 - January 2024</span></div>
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Web Design Intern</h3>
-                            <div class="subheading mb-3">Shout! Media Productions</div>
-                            <p>Collaboratively administrate empowered markets via plug-and-play networks. Dynamically procrastinate B2C users after installed base benefits. Dramatically visualize customer directed convergence without revolutionary ROI.</p>
+                            <h3 class="mb-0">IT Field Support Technician</h3>
+                            <div class="subheading mb-3">University of Delaware - IT Department</div>
+                            <ul>
+                                <li> Provided IT support to the University’s facilities department, comprising about 500-600 employees, and managed an average of 1300 client devices including iPhones, iPads, and Laptops</li>
+                                <li> Configured local system network and installed security certificates to route client’s devices to the university    Wi-Fi</li>
+                                <li> Imaged laptops and desktops to the client's needs through MDT and deployed them in their workspace</li>
+                                <li> Maintained up-to-date customer records on Team Dynamix and interacted with customers through email, phone, and in person</li>
+                                <li> Addressed domain problems on the university-owned laptops and managed the devices through Active Directory</li>
+                                <li> Used TeamViewer to remote into clients’ computers for troubleshooting purposes</li>
+                            </ul>
+                        </div>
+                        <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Assistant System Engineeer</h3>
+                            <div class="subheading mb-3">TATA Consultancy Services</div>
+                            <ul>
+                                <li> Dealt with vulnerability assessment checks for client’s networks and applications</li>
+                                <li> Analyzed policies and reviewed practices to prevent unauthorized access to network-accessible resources</li>
+                                <li> Collaborated with a global team of 50 in consolidating client’s applications security</li>
+                                <li> Developed data sheets using advanced Excel tools to present data and communicate insights to the clients</li>
+                            </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2008 - June 2010</span></div>
                     </div>
