--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
         <meta name="description" content="" />
         <meta name="author" content="" />
-        <title>Resume - Start Bootstrap Theme</title>
+        <title>Suhas Cristy Mathey - My Portfolio</title>
         <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.3.0/js/all.js" crossorigin="anonymous"></script>
@@ -47,7 +47,7 @@
                          (XXX) XXX-XXXX ·
                         <a href="mailto:mscristy@udel.edu">mscristy@udel.edu</a>
                     </div>
-                    <p class="lead mb-5">Working as Master's Student in Computer Engineering at University of Delaware</p>
+                    <p class="lead mb-5">Currently purusing my master's degree in Computer Engineering at University of Delaware with a focus on AI, Machine Learning, and Data Science</p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ms-cristy/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Cristy210"><i class="fab fa-github"></i></a>
