--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#about">About</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#skills">Skills</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards</a></li>
@@ -44,7 +45,6 @@
                         <span class="text-primary">Mathey</span>
                     </h1>
                     <div class="subheading mb-5">
-                         (XXX) XXX-XXXX ·
                         <a href="mailto:mscristy@udel.edu">mscristy@udel.edu</a>
                     </div>
                     <p class="lead mb-5">Currently purusing my master's degree in Computer Engineering at University of Delaware with a focus on AI, Machine Learning, and Data Science</p>
@@ -147,6 +147,38 @@
                             <p>GPA: 3.1</p>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">August 2017 - May 2021</span></div>
+                    </div>
+                </div>
+            </section>
+            <hr class="m-0" />
+            <!--Projects-->
+            <section class="resume-section" id="Projects">
+                <div class="resume-section-content">
+
+                    <h2 class="mb-5">Projects</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Course: Imaging & Deep Learning</h3>
+                            <div class="subheading mb-3">Image Super Resolution using Deep Learning</div>
+                            <ul>
+                                <li> Used SR Generative Adversarial Network (GAN) to restore the quality of low-resolution images</li>
+                                <li> Applied a pre-trained Convolution Neural Network (CNN) to improve the quality of a digitally zoomed image</li>
+                                <li> Created a dataset of 20,000 images to train the network and 10,000 images to test the network</li>
+                                <li> Increased the resolution of an image by 30%</li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Course: Human-Computer Interaction</h3>
+                            <div class="subheading mb-3"> Body Posture Detection using Mediapipe Framework </div>
+                            <ul>
+                                <li> Built an ML pipeline using MediaPipe Framework to detect wrong postures while exercising</li>
+                                <li> Used SciPy Library to calculate the cosine similarity between the correct form and the wrong form of exercise</li>
+                                <li> Utilized postures from Cornell’s Physical Therapy database as our benchmarks for form comparison</li>
+                                <li> Implemented the model for a safer and more efficient training regimen for athletes while working out</li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </section>
