--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2023 - January 2024</span></div>
                     </div>
-                    <div class="d-flex flex-column flex-md-row justify-content-between">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">IT Field Support Technician</h3>
                             <div class="subheading mb-3">University of Delaware - IT Department</div>
