Updates on Education Section, Timeline adjustment

--- a/index.html
+++ b/index.html
@@ -131,25 +131,25 @@
             <section class="resume-section" id="education">
                 <div class="resume-section-content">
                     <h2 class="mb-5">Education</h2>
-                    <div class="row mb-5">
-                        <div class="col-md-9">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0"> University of Delaware</h3>
                             <div class="subheading-mb3"> Master of Science</div>
                             <div> Computer Engineering</div>
                             <p> GPA: 3.5</p>
                         </div>
-                        <div class="col-md-3 text-md-right"> 
-                            <span class="text-primary"> February 2023 - Present</span>
+                        <div class="flex-shrink-0 date"> 
+                            <span class="text-primary"> Expected December 2024</span>
                         </div>
                     </div>
-                    <div class="row mb-5">
-                        <div class="col-md-9">
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-1"> Indian Institute of Information Technology, Tiruchirappalli</h3>
                             <div class="subheading-mb3"> Bachelor of Technology</div>
                             <div> Electronics & Communication Engineering</div>
                             <p> GPA: 3.1</p>
                         </div>
-                        <div class="col-md-3 text-md-right"> 
+                        <div class="flex-shrink-0 date"> 
                             <span class="text-primary"> August 2017 - May 2021</span>
                         </div>
                     </div>
@@ -163,8 +163,8 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Course: Soft Materials Innovation</h3>
-                            <div class="subheading mb-3"> Data driven modeling for Polymer Performance </div>
+                            <h3 class="mb-0">Data driven modeling for Polymer Performance</h3>
+                            <div class="subheading mb-3"> Course: Soft Materials Innovation </div>
                             <ul>
                                 <li> Implemented statistical modeling on unstructured spectroscopy datasets to construct quantitative polymer structure-performance relationship</li>
                                 <li> Employed different data cleaning techniques like Binning, Peak Normalization, and PCA </li>
@@ -176,8 +176,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Course: Imaging & Deep Learning</h3>
-                            <div class="subheading mb-3">Image Super Resolution using Deep Learning</div>
+                            <h3 class="mb-0">Image Super Resolution using Deep Learning</h3>
+                            <div class="subheading mb-3">Course: Imaging & Deep Learning</div>
                             <ul>
                                 <li> Used SR Generative Adversarial Network (GAN) to restore the quality of low-resolution images</li>
                                 <li> Applied a pre-trained Convolution Neural Network (CNN) to improve the quality of a digitally zoomed image</li>
@@ -188,8 +188,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Course: Human-Computer Interaction</h3>
-                            <div class="subheading mb-3"> Body Posture Detection using Mediapipe Framework </div>
+                            <h3 class="mb-0">Body Posture Detection using Mediapipe Framework</h3>
+                            <div class="subheading mb-3"> Course: Human-Computer Interaction </div>
                             <ul>
                                 <li> Built an ML pipeline using MediaPipe Framework to detect wrong postures while exercising</li>
                                 <li> Used SciPy Library to calculate the cosine similarity between the correct form and the wrong form of exercise</li>
@@ -200,8 +200,8 @@
                     </div>
                     <div class="d-flex flex-column flex-md-row justify-content-between">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Undergrad - Final Year Porject</h3>
-                            <div class="subheading mb-3"> Smart Irrigation system using IoT</div>
+                            <h3 class="mb-0">Smart Irrigation system using IoT</h3>
+                            <div class="subheading mb-3"> Undergrad - Final Year Porject</div>
                             <ul>
                                 <li> Build an IoT model using Proteus 8 Professional simulation software to administer water utilization in the Indian paddy fields</li>
                                 <li> Used moisture sensor to record the soil’s moisture capacity </li>
