--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#experience">Experience</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Projects">Projects</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#interests">Interests</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Community Service">Community Service</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards & Certifications</a></li>
                 </ul>
             </div>
@@ -46,7 +46,12 @@
                     <div class="subheading mb-5">
                         <a href="mailto:mscristy@udel.edu">mscristy@udel.edu</a>
                     </div>
-                    <p class="lead mb-5">Currently purusing my master's degree in Computer Engineering at University of Delaware with a focus on Machine Learning, and Data Science</p>
+                    <p class="lead mb-5">I'm a master's student in Computer Engineering at the University of Delaware, 
+                        I have developed a solid foundation in different Machine Learning, Data Science, and Statistical Models through my academic research and coursework. 
+                        As an aspiring Data Scientist, my academic background and projects have honed my analytical skills, particularly in statistical modeling and unsupervised learning.
+                        I'm looking forward to contributing to a Data Science role to drive impactful solutions.
+
+                    </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ms-cristy/"><i class="fab fa-linkedin-in"></i></a>
                         <a class="social-icon" href="https://github.com/Cristy210"><i class="fab fa-github"></i></a>
@@ -163,10 +168,10 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
-                            <h3 class="mb-0">Data driven modeling for Polymer Performance</h3>
-                            <div class="subheading mb-3"> Course: Soft Materials Innovation </div>
+                            <h3 class="mb-0">Feature Engineering with Analytical Data - Dow Chemical</h3> 
+                            <div class="subheading mb-3"> Course: Computing & Data Science for Soft Materials Innovation </div>
                             <ul>
-                                <li> Implemented statistical modeling on unstructured spectroscopy datasets to construct quantitative polymer structure-performance relationship</li>
+                                <li> Implemented data driven modeling on unstructured spectroscopy datasets to develop a quantitative polymer structure and performance relationship</li>
                                 <li> Employed different data cleaning techniques like Binning, Peak Normalization, and PCA </li>
                                 <li> Data Pre-Processing techniques are used for improving accuracy and dimensionality reduction</li>
                                 <li> Implemented linear regression models in analyzing the relationship between polymer structure and performance</li>
@@ -214,9 +219,29 @@
             </section>
             <hr class="m-0" />
             <!-- Interests-->
-            <section class="resume-section" id="interests">
+            <section class="resume-section" id="Community Service">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Interests</h2>
+                    <h2 class="mb-5">Community Service</h2>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">HOPE WorldWide Ltd</h3> 
+                            <ul>
+                                <li> Active volunteer in Hope Worldwide since freshman year in college </li>
+                                <li> Organized a volunteer event to renovate Hope Worldwide orphanage in Tiruchirappalli, India with 200+ participants </li>
+                                <li> Organized a clean-up with about 50 people from the locality at White Clay Creek Park in Newark, DE </li>
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
+                            <h3 class="mb-0">Hen Hacks, University of Delaware</h3> 
+                            <ul>
+                                <li>Participated in a 24-hour hackathon conducted by the University of Delaware </li>
+                                <li>Built a website in improving financial literacy in underserved communities in Delaware </li>
+                                <li> Successfully launched a website to facilitate the community in providing the best resources when it comes to looking out for a loan </li>
+                            </ul>
+                        </div>
+                    </div>
                 </div>
             </section>
             <hr class="m-0" />
