--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
                             <div class="subheading mb-3">University of Delaware - Electrical and Computer Engineering Department</div>
                             <ul>
                                 <li> Research Focus is on Subspace Clustering Techniques for Image color Segmentation</li>
-                                <li> Preprocessing high-dimensional image data and using PCA to reduce the dimensionality</li>
+                                <li> Using various matrix decomposition techniques, we represent high-dimensional image data into a lower dimensional subspace</li>
                                 <li> Assisting in the identification and analysis of key ML algorithms for subspace clustering through literature review and contributing to the development of research methodologies</li>
-                                <li> Preparing and presenting research findings in weekly lab meetings</li>
+                                <li> Presenting research findings in weekly lab meetings</li>
                                 <li> Uses CairoMakie for data Visualization</li>
                             </ul>
                         </div>
