--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
                             <h3 class="mb-0">Graduate Research Assistant</h3>
                             <div class="subheading mb-3">University of Delaware - Electrical and Computer Engineering Department</div>
                             <ul>
-                                <li> Research Focus is on Subspace Clustering Techniques for Image color Segmentation</li>
+                                <li> Research Focus is on Unsupervised learning techniques like Subspace Clustering for Hyper-Spectral Image Analysis</li>
                                 <li> Using various matrix decomposition techniques, we represent high-dimensional image data into a lower dimensional subspace</li>
                                 <li> Assisting in the identification and analysis of key ML algorithms for subspace clustering through literature review and contributing to the development of research methodologies</li>
                                 <li> Presenting research findings in weekly lab meetings</li>
