--- a/index.html
+++ b/index.html
@@ -279,7 +279,7 @@
                                 <a class="social-icon" href="https://x.com/UDLibrary/status/1792933811770032210"><i class="fab fa-twitter"></i></a>
                                 <a class="social-icon" href="https://www.facebook.com/photo.php?fbid=862504192584925&set=pb.100064760558333.-2207520000&type=3"><i class="fab fa-facebook"></i></a>
                             </h3> 
-                            <p class="award_description"> The scholarship program serves as a means of recognizing outstanding student empoloyee's work and leadership potential, as well as supporting their pursuits of a graduate education </p>
+                            <p class="award_description"> Since 1996, the Library, Museums and Press Student Assistant Scholarship rewards outstanding student service at the University of Delaware Library, Museums and Press. The scholarship program serves as a means of recognizing outstanding student empoloyee's work and leadership potential, as well as supporting their pursuits of a graduate education </p>
                         </div>
                     </div>
                     
