About & Project Description Update

--- a/index.html
+++ b/index.html
@@ -46,11 +46,11 @@
                     <div class="subheading mb-5">
                         <a href="mailto:mscristy@udel.edu">mscristy@udel.edu</a>
                     </div>
-                    <p class="lead mb-5">I'm a master's student in Computer Engineering at the University of Delaware, 
+                    <p class="lead mb-5">
+                        I'm a master's student in Computer Engineering at the University of Delaware, 
                         I have developed a solid foundation in different Machine Learning, Data Science, and Statistical Models through my academic research and coursework. 
-                        As an aspiring Data Scientist, my academic background and projects have honed my analytical skills, particularly in statistical modeling and unsupervised learning.
-                        I'm looking forward to contributing to a Data Science role to drive impactful solutions.
-
+                        Predominantly my research focuses on multi-spectral imaging, where I employ different data science techniques to identify patterns and draw inferences from images. This combines elements of data science, particularly focusing on tensors and matrix decomposition techniques and imaging, allowing me to explore datasets and extract meaningful insights. 
+                        I'm looking forward to contributing to roles in Data Science, Machine Learning, and Computer Vision especially those centered around multi-spectral imaging.
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ms-cristy/"><i class="fab fa-linkedin-in"></i></a>
@@ -191,11 +191,11 @@
                             <div class="subheading mb-3"> 
                                 Course: Computing & Data Science for Soft Materials Innovation </div>
                             <ul>
-                                <li> Implemented data driven modeling on unstructured spectroscopy datasets to develop a quantitative polymer structure and performance relationship</li>
-                                <li> Employed different data cleaning techniques like Binning, Peak Normalization, and PCA </li>
-                                <li> Data Pre-Processing techniques are used for improving accuracy and dimensionality reduction</li>
+                                <li> Implemented data driven modeling on unstructured spectroscopy datasets namely, FTIR, GPC, and NMR to develop a quantitative polymer structure and performance relationship</li>
+                                <li> Employed different data pre-processing techniques like Binning, Peak Normalization, and PCA  </li>
+                                <li> Data Pre-Processing techniques are used for improving accuracy of the spectral analysis and reducing dimensionality for data modeling</li>
                                 <li> Implemented linear regression models in analyzing the relationship between polymer structure and performance</li>
-                                <li> Used matplotlib for Data Visualization in terms of scree plots, parity plots</li>
+                                <li> Utilized Matplotlib for comprehensive data visualization, including scree plots, parity plots, and other graphical representations</li>
                             </ul>
                         </div>
                     </div>
