--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                             <div class="subheading mb-3"> 
                                 Course: Computing & Data Science for Soft Materials Innovation </div>
                             <ul>
-                                <li> Implemented data driven modeling on unstructured spectroscopy datasets namely, FTIR, GPC, and NMR to develop a quantitative polymer structure and performance relationship</li>
+                                <li> Implemented data driven modeling on unstructured spectroscopy datasets namely, FTIR, GPC, and NMR to develop a quantitative polymer structure - performance relationship</li>
                                 <li> Employed different data pre-processing techniques like Binning, Peak Normalization, and PCA  </li>
                                 <li> Data Pre-Processing techniques are used for improving accuracy of the spectral analysis and reducing dimensionality for data modeling</li>
                                 <li> Implemented linear regression models in analyzing the relationship between polymer structure and performance</li>
