Git icon to the Feature Engineering Project

--- a/index.html
+++ b/index.html
@@ -185,6 +185,7 @@
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">Feature Engineering with Analytical Data - Dow Chemical
+                                <a class="social-icon" href="https://github.com/Cristy210/Spectroscopy-Analysis---Feature-Engineering-with-Analytical-Data"><i class="fab fa-github"></i></a>
                                 <a class="social-icon" href="https://sites.udel.edu/midas-nrt/graduate-trainee-timeline/courses-for-nrt-trainees/nrt-hackathon-course/"><i class="fab fa-google"></i></a>
                                 <a class="social-icon" href="https://drive.google.com/drive/folders/1pnrf9RPJLI2R9dRemOaOREQqdrrU9I2O?usp=sharing"><i class="fab fa-google-drive"></i></a>
                                 
