--- a/index.html
+++ b/index.html
@@ -70,11 +70,10 @@
                             <h3 class="mb-0">Graduate Research Assistant</h3>
                             <div class="subheading mb-3">University of Delaware - Electrical and Computer Engineering Department</div>
                             <ul>
-                                <li> Research Focus is on Unsupervised learning techniques like Subspace Clustering for Hyper-Spectral Image Analysis</li>
-                                <li> Using various matrix decomposition techniques, we represent high-dimensional image data into a lower dimensional subspace</li>
-                                <li> Assisting in the identification and analysis of key ML algorithms for subspace clustering through literature review and contributing to the development of research methodologies</li>
-                                <li> Presenting research findings in weekly lab meetings</li>
-                                <li> Uses CairoMakie for data Visualization</li>
+                                <li> Working in a multi-disciplinary project  involving unsupervised learning techniques like Subspace Clustering for Hyper-Spectral Image Analysis </li>
+                                <li>Developing Clustering algorithms in Julia language and using matrix decomposition techniques to represent high-dimensional image data into lower dimensional sub-spaces for Image Processing & Analyzing</li>
+                                <li>Documenting research findings and presenting results in weekly lab meetings through presentations</li>
+                                <li>Using CairoMakie library for Data Visualization and to draw inferences from Hyper-Spectral images</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2024 - Present</span></div>
