--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#education">Education</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Projects">Projects</a></li>
                     <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#Community Service">Community Service</a></li>
-                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Awards & Certifications</a></li>
+                    <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#awards">Award(s)</a></li>
                 </ul>
             </div>
         </nav>
@@ -272,7 +272,7 @@
             <!-- Awards-->
             <section class="resume-section" id="awards">
                 <div class="resume-section-content">
-                    <h2 class="mb-5">Awards & Certifications</h2>
+                    <h2 class="mb-5">Award(s)</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
                             <h3 class="mb-0">2024 Library Student Assistant Scholarship Award 
