--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@
                     <p class="lead mb-5">
                         I'm a master's student in Computer Engineering at the University of Delaware, 
                         I have developed a solid foundation in different Machine Learning, Data Science, and Statistical Models through my academic research and coursework. 
-                        Predominantly my research focuses on multi-spectral imaging, where I employ different data science techniques to identify patterns and draw inferences from images. This combines elements of data science, particularly focusing on tensors and matrix decomposition techniques and imaging, allowing me to explore datasets and extract meaningful insights. 
-                        I'm looking forward to contributing to roles in Data Science, Machine Learning, and Computer Vision especially those centered around multi-spectral imaging.
+                        My current research focuses on developing clustering algorithms for detection and mapping of pigments used in ancient arachelogical paintings. These techniques are applied in Conservation Science particularly in the analysis of paintings by providing
+                        key insgihts into artist material use, painting condition and aritistic technical execution. 
+                        I'm looking forward to contributing to roles in Data Science, Machine Learning, and Computer Vision. 
                     </p>
                     <div class="social-icons">
                         <a class="social-icon" href="https://www.linkedin.com/in/ms-cristy/"><i class="fab fa-linkedin-in"></i></a>
