--- a/index.html
+++ b/index.html
@@ -71,10 +71,11 @@
                             <h3 class="mb-0">Graduate Research Assistant</h3>
                             <div class="subheading mb-3">University of Delaware - Electrical and Computer Engineering Department</div>
                             <ul>
-                                <li> Working in a multi-disciplinary project  involving unsupervised learning techniques like Subspace Clustering for Hyper-Spectral Image Analysis </li>
-                                <li>Developing Clustering algorithms in Julia language and using matrix decomposition techniques to represent high-dimensional image data into lower dimensional sub-spaces for Image Processing & Analyzing</li>
-                                <li>Documenting research findings and presenting results in weekly lab meetings through presentations</li>
-                                <li>Using CairoMakie library for Data Visualization and to draw inferences from Hyper-Spectral images</li>
+                                <li>Working on an inter-disciplinary project  involving hyperspectral Image Analysis using unsupervised learning techniques. </li>
+                                <li>Utilizing matrix decomposition techniques from linear algebra to handle high-dimensional image data, transforming it into lower-dimensional subspaces for efficient Image analysis & Processing</li>
+                                <li>Developing and implementing machine learning algorithms in Julia to cluster and analyze hyperspectral image datasets using unsupervised learning methods</li>
+                                <li>Presenting research findings through weekly lab meetings using data visualizations created with CairoMakie, focusing on clear and actionable insights from hyperspectral data analysis</li>
+                                <li>Utilizing GitHub for version control and collaboration with the research team to manage the development workflow effectively</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">February 2024 - Present</span></div>
@@ -99,6 +100,7 @@
                                 <li> Managed a team of 8 to help students and faculty address their multimedia needs</li>
                                 <li> Collaborate with individuals from diverse backgrounds and effectively communicating in utilizing the multimedia resources and services</li>
                                 <li> Worked on Video Editing project using Final Cut Pro on archived footage of University’s first Study Abroad Trip</li>
+                                <li>Awarded the 2024 Library Student Assistant Scholarship award in recognition of my work and demonstrated leadership potential</li>
                             </ul>
                         </div>
                         <div class="flex-shrink-0"><span class="text-primary">September 2023 - January 2024</span></div>
