--- a/index.html
+++ b/index.html
@@ -172,6 +172,20 @@
                     <h2 class="mb-5">Projects</h2>
                     <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
                         <div class="flex-grow-1">
+                            <h3 class="mb-0">Pigment Mapping via Subspace Clustering - Hyperspectral Image Analysis
+                                <a class="social-icon" href="https://www.linkedin.com/feed/update/urn:li:activity:7261014208564064256/"><i class="fab fa-linkedin-in"></i></a>
+                                
+                            </h3> 
+                            <ul>
+                                <li>Developing and optimizing machine learning algorithms in Julia for pigment mapping, to enhance clustering performance and accuracy in hyperspectral RIS datasets. </li>
+                                <li>Implementing clustering techniques to group pixels based on spectral signatures, aiding in the identification of pigments.</li>
+                                <li>Achieved over 95% accuracy in clustering results through the development and optimization of machine learning algorithms for spectral signature-based pigment identification in hyperspectral imaging datasets.</li>
+                                <li>Presented clustering analysis and research findings at technical conferences, including a keynote talk at Techno Heritage 2024 and a poster session at the 2024 IEEE Baltimore Technical Colloquium, underlining the contribution to technical innovation in the field of Machine Learning and signal processing. </li>     
+                            </ul>
+                        </div>
+                    </div>
+                    <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+                        <div class="flex-grow-1">
                             <h3 class="mb-0">Movie Genre Prediction - NLP
                                 <a class="social-icon" href="https://github.com/Cristy210/Movie-Trend-Analysis"><i class="fab fa-github"></i></a>
                                 
